# email_service

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
src/: consumer.rs  mailer.rs  main.rs  models.rs
